# datapi

./: .gitignore  LICENSE  README.md  app.py  data_management.py  market_holidays.txt  nsecookie.txt  nseheaders.txt  option_class.py  pyproject.toml  stock_list.txt  utility.py
