[tool.poetry]
name = "ticker"
version = "0.0.1"
description = ""
authors = ["rohit.sood <rsoods@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Flask = "^2.0.2"
sanic = "20.6.3"
pytz = "^2022.1"
TA-Lib = "^0.4.24"
pandas-ta = "^0.3.14-beta.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
